certificates_and_ingress/ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/tls-acme: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.bestrongweb.pp.ua
      secretName: www-tls
  rules:
  - host: www.bestrongweb.pp.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bestrong-api-service
            port:
              number: 80
