certificates_and_ingress/opencost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - bestrong-admin'
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: opencost-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: opencost.bestrongweb.pp.ua
    http:
      paths:
      - backend:
          service:
            name: opencost
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - opencost.bestrongweb.pp.ua
    secretName: opencost-tls
